--- a/src/core/core.csproj
+++ b/src/core/core.csproj
@@ -45,17 +45,10 @@
         <NoWarn>1591;1573;</NoWarn>
     </PropertyGroup>
 
-    <!-- framework tools dependecies;-->
-    <ItemGroup>
-        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.0-preview.5.*">
-            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-            <PrivateAssets>all</PrivateAssets>
-        </PackageReference>
-    </ItemGroup>
-
     <!-- framework dependecies; -->
     <ItemGroup>
-        <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="5.0.0-preview.5.*" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.0-preview.*" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="5.0.0-preview.*" />
     </ItemGroup>
 
 </Project>
