--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -16,7 +16,7 @@ jobs:
     - name: install dotnet.preview
       uses: actions/setup-dotnet@master
       with:
-        dotnet-version: 5.0.0-preview.*
+        dotnet-version: 5.*
     - name: restore
       run: dotnet restore
     - name: build
